# HoloLensArucoUnity

./: README.MD
aruco_core/: CMakeLists.txt  aruco_core.cpp
aruco_core/src/: ar_omp.cpp  ar_omp.h  cameraparameters.cpp  cvdrawingutils.cpp  cvdrawingutils.h  dictionary.cpp  dictionary.h  ippe.cpp  ippe.h  levmarq.h  marker.cpp  marker.h  markerdetector.cpp  markerdetector.h  markerlabeler.cpp  markerlabeler.h  markermap.cpp  markermap.h  posetracker.cpp  posetracker.h
aruco_core/src/markerlabelers/: dictionary_based.cpp  dictionary_based.h
holographic_unity/: .gitignore
holographic_unity/Assets/: WSATestCertificate.pfx
holographic_unity/Assets/Material/: ProcessedVideoMaterial.mat
holographic_unity/Assets/Scenes/: arucoDisplay.unity  arucoSideBySide.unity
holographic_unity/Assets/Scripts/: arucoDisplay.cs  arucoSideBySide.cs
holographic_unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
hololens_aruco_unity/: .gitignore
hololens_aruco_unity/Assets/Material/: OriginalVideoMaterial.mat
hololens_aruco_unity/Assets/Scenes/: arucoDisplay.unity
hololens_aruco_unity/Assets/Scripts/: arucoDisplay.cs  arucoSideBySide.cs  camVideoNormal.cs
hololens_aruco_unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
opencv_uwp/include/opencv2/: cvconfig.h
opencv_uwp/include/opencv2/videoio/: videoio_c.h
opencv_uwp/x86/vc14/lib/: OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_calib3d300.lib  opencv_core300.lib  opencv_features2d300.lib  opencv_flann300.lib  opencv_hal300.lib  opencv_imgcodecs300.lib  (+9 more)
