CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)
PROJECT(aruco_core)
MESSAGE("Building ${PROJECT_NAME}")

ADD_DEFINITIONS(-DCMAKE_SYSTEM_NAME=WindowsStore)
ADD_DEFINITIONS(-DCMAKE_SYSTEM_VERSION=10.0)

FIND_PACKAGE(OpenCV REQUIRED ml core imgproc features2d calib3d)

MESSAGE(${OpenCV_LIBS})

INCLUDE_DIRECTORIES(
	${OpenCV_INCLUDE_DIRS}
)
INCLUDE_DIRECTORIES(
	src, Eigen
)

FILE(GLOB_RECURSE EIGEN_FILES "Eigen/*.h" "Eigen/*.c")
MESSAGE(${EIGEN_FILES})

FILE(GLOB_RECURSE SOURCE_FILES "src/*")
MESSAGE(${SOURCE_FILES})

ADD_LIBRARY( aruco_core SHARED
	aruco_core.cpp
	${EIGEN_FILES}
	${SOURCE_FILES}
)

TARGET_LINK_LIBRARIES( aruco_core 
	${OpenCV_LIBS}
)
